@@ -3,7 +3,7 @@ nlev    = 30
 /
 ! Shear mixing parameters from KPP paper
 &KPP_nml
-nu_zero = 1.0d0
-Ri_zero = 0.7d0
-p_one   = 3.0d0
+KPP_nu_zero = 1.0d0
+KPP_Ri_zero = 0.7d0
+KPP_exp     = 3.0d0
 /
