@@ -86,11 +86,12 @@ module cvmix_kinds_and_types
   ! (currently Pacanowski-Philander or Large et al)
   type, public :: cvmix_shear_params_type
       character(len=cvmix_strlen) :: mix_scheme
-      real(cvmix_r8)              :: alpha
-      real(cvmix_r8)              :: n
-      real(cvmix_r8)              :: nu_zero
-      real(cvmix_r8)              :: Ri_zero
-      real(cvmix_r8)              :: p_one
+      real(cvmix_r8)              :: PP_nu_zero
+      real(cvmix_r8)              :: PP_alpha
+      real(cvmix_r8)              :: PP_exp
+      real(cvmix_r8)              :: KPP_nu_zero
+      real(cvmix_r8)              :: KPP_Ri_zero
+      real(cvmix_r8)              :: KPP_exp
   end type cvmix_shear_params_type
 
   ! cvmix_tidal_params_type contains the necessary parameters for shear mixing
